--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,7 @@
 		},
 		"enhance": true
 	},
-	"appid": "wx0b4a050fdf229609",
+	"appid": "wx87003258d57a004b",
 	"projectname": "lifeService",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
