--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,8 +7,8 @@
     "pages/onlineRepairs/onlineRepairs",
     "pages/busCardList/busCardList",
     "pages/msgBoard/msgBoard",
-    "pages/serviceDesc/serviceDesc"
-    
+    "pages/serviceDesc/serviceDesc",
+    "pages/empDetail/empDetail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
