服务添加列表

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
+    "pages/addService/addService",
     "pages/home/home",
+    
     "pages/me/me",
     "pages/index/index",
     "pages/addBusCard/addBusCard",
