--- a/miniprogram/components/appointmentTime/appointmentTime.json
+++ b/miniprogram/components/appointmentTime/appointmentTime.json
@@ -2,6 +2,7 @@
   "component": true,
   "usingComponents": {
     "van-radio": "vant-weapp/radio/index",
-    "van-radio-group": "vant-weapp/radio-group/index"
+    "van-radio-group": "vant-weapp/radio-group/index",
+    "input-number": "/components/inputNumber/input"
   }
 }
